# HierarchicalDiagramStudio

./: .gitignore  PROMPT.txt  README.md  diagram_editor.py  diagram_editor_old1.py  diagram_editor_old2.py  diagram_editor_old3.py  diagram_editor_old4.py  diagram_editor_old5.py  diagram_editor_old6.py  diagram_editor_old7.py
.github/workflows/: ci-cd.yml
doc/: CONFIGURE.md  INSTALL.md  TESTING.md  UPLOAD.md
examples/: principal.hdiagram
examples/chapter1/: função.hdiagram
src/: README.md  program_launcher.py  pyproject.toml  toml_gen.py
src/hierarchical_diagram_studio/: about.py  desktop.py  diagram_editor.py  program.py  program_old.py
